--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,13 @@
-url=http://192.168.0.28:4444
-chromeBrowser= Chrome
-chromeVersion = 119.0.6045.160
+url=http://192.168.0.163:4444
 
-firefoxBrowser = Firefox
-firefoxversion =120.0
+chromeBrowser=Chrome
+chromeVersion=119.0.6045.160
+
+firefoxBrowser=Firefox
+firefoxVersion=120.0
+
+edgeBrowser=
+edgeVersion=
+
+IEBrowser=
+IEVersion=
